# linux-edu-rank

./: .gitignore  CNAME  README.md  function_lib.py  index.html  linux-statistic.py  pyproject.toml  requirements.txt  result.json
.github/workflows/: pylint.yml  update-page.yaml
detail/: 1.html  10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  10_10.html  10_11.html  10_12.html  10_2.html  10_3.html  10_4.html  10_5.html  10_6.html  10_7.html  10_8.html  10_9.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  11_10.html  11_2.html  11_3.html  11_4.html  11_5.html  11_6.html  (+792 more)
docs/: architecture.md  data-format.md
src/: main.py
src/linux_edu_rank/: main.py  statistic.py  utils.py
tests/: conftest.py  test_functions.py
zyz/: README.md  setup.py
zyz/git_university_stats/: aggregate.py  git_commit.py  html_output.py  main.py  meta.py  university_list.py
