[project]
name = "linux-edu-rank"
version = "0.1.0"
description = "Linux Kernel Patch Statistic among Universities"
authors = [
    {name = "jxlpzqc", email = "chengziqiu@hust.edu.cn"},
    {name = "mudongliang", email = "dzm91@hust.edu.cn"},
    {name = "TurtleRuss", email = "tttturtleruss@gmail.com"},
]
dependencies = [
    "requests==2.31.0",
    "GitPython==3.1.42",
    "tqdm==4.65.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "BSD 2-Clause"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {cmd = "python3 src/linux_edu_rank/main.py"}
