[project]
name = "linux-edu-rank"
version = "0.1.0"
description = "This project is to do some data statistics about Linux kernel patches contributed by universities."
authors = [
    {name = "jxlpzqc", email = "chengziqiu@hust.edu.cn"},
    {name = "mudongliang", email = "dzm91@hust.edu.cn"},
    {name = "TurtleRuss", email = "tttturtleruss@gmail.com"},
]
dependencies = [
    "requests==2.31.0",
    "GitPython==3.1.42",
    "tqdm==4.65.0",
    "pytz>=2025.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "BSD-2-Clause"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {cmd = "python3 src/main.py"}
lint = {cmd = "pylint **/*.py --fail-under=9.0 --exit-zero"}
test = {cmd = "pytest"}


[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -ra"
testpaths = [
    "tests",
]
